<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>thermal_calibration_rqt</name>
  <version>0.1.0</version>
  <description>RQT plugin for thermal camera calibration</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>thermal_calibration_interfaces</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-opencv</depend>
  <depend>python3-pyqt5</depend>
  <depend>python3-pyqt5.qtsvg</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Added dependencies -->
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>mono16_converter</exec_depend>
  <exec_depend>tmux</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>